--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -55,9 +55,9 @@ Input & Output \\
 T & T\\
 F & F\\ \bottomrule
 \end{tabular}
-\end{center} This is the one-place \define{identity function}: it yields as output just whatever it was given as input. While there are uses for such a function, we don't really need a connective to express it. (That would be a connective $ø$ such that $\meta{A}$ and $ø\meta{A}$ always had the same truth value, and so are indistinguishable from the perspective of \TFL.) 
+\end{center} This is the one-place \define{identity function}: it yields as output just whatever it was given as input. While there are uses for such a function, we don't really need a connective to express it. (That would be a connective $⦰$ such that $\meta{A}$ and $⦰\meta{A}$ always had the same truth value, and so are indistinguishable from the perspective of \TFL.) 
 
-Truth-functions – like functions in general, in fact – are distinguished from one another if there is some possible input on which the two functions give a different output. So we can enumerate all the possible one-place truth-functions, since there are only two possible inputs, and two possible outputs. I list them in the following table:
+Truth-functions – like functions in general, in fact – are distinguished from one another if there is some possible input on which the two functions give a different output. So we can enumerate all the possible one-place truth-functions, since there are only two possible inputs, and two possible outputs. I list them in the following table: 
 \begin{center}
 \begin{tabular}{c|cccc} \toprule 
 Input & $f_{1}$ & $f_{2}$ & $f_{3}$ & $f_{4}$ \\
